crates/hir-ty/tests/snapshots/jls_exceptions__catch_never_thrown.snap
---
source: crates/hir-ty/tests/jls_exceptions.rs
expression: out
---
FILE /src/com/example/Never.java:
package com.example;

import java.io.IOException;

class Never {
    void t() {
        try {
            int quiet = 1;
        } catch (IOException e) {
        }
    }
}

method t(): void
  locals: l0: int | l1: java.io.IOException
  exprs: e0: int
  diags: l1@8:17: catch-never-thrown: exception IOException is never thrown in the corresponding try block
