crates/hir-ty/tests/snapshots/jls_exceptions__catch_order_unreachable.snap
---
source: crates/hir-ty/tests/jls_exceptions.rs
expression: out
---
FILE /src/com/example/Exc.java:
package com.example;

import java.io.IOException;

class Exc {
    void risky() throws IOException { }

    void m() {
        try {
            risky();
        } catch (Exception e) {
        } catch (IOException e) {
        }
    }
}

method risky(): void
  locals: 
  exprs: 
method m(): void
  locals: l0: java.lang.Exception | l1: java.io.IOException
  exprs: e0: void
  diags: l1@11:17: already-caught: Exception IOException has already been caught
