crates/hir-ty/tests/snapshots/jls_exceptions__catch_thrown_is_fine.snap
---
source: crates/hir-ty/tests/jls_exceptions.rs
expression: out
---
FILE /src/com/example/Thrown.java:
package com.example;

import java.io.IOException;

class Thrown {
    void t() throws IOException {
        try {
            if (Math.max(1, 2) > 1) {
                throw new IOException("real");
            }
        } catch (IOException e) {
        }
    }
}

method t(): void
  locals: l0: java.io.IOException
  exprs: e0: int | e1: int | e3: int | e4: int | e5: boolean | e6: boolean | e7: java.lang.String | e8: java.io.IOException
