crates/hir-ty/tests/snapshots/jls_exceptions__checked_exception_declared.snap
---
source: crates/hir-ty/tests/jls_exceptions.rs
assertion_line: 16
expression: out
---
FILE /src/com/example/Exc.java:
package com.example;

import java.io.IOException;

class Exc {
    void risky() throws IOException { }

    void caller() throws IOException { risky(); }
}

method risky(): void
  locals: 
  exprs: 
method caller(): void
  locals: 
  exprs: e0: void
